# tic-taskell-toe

./: .gitignore  LICENSE  TTT.cabal
src/: Main.hs
src/TTT/: AI.hs  Game.hs  Utils.hs
