Name:                ttt
Version:             0.1
Synopsis:            Tic Tac Toe implementation
License:             BSD3
License-file:        LICENSE
Author:              Seth Schubert
Maintainer:          seth.schubert@gmail.com
Category:            Game
Build-type:          Simple

Cabal-version:       >=1.2

Executable ttt
  main-is: Main.hs
  hs-source-dirs: src
  ghc-options: 
    -O2 
    -fno-spec-constr-count 
    -optl-Wl,-read_only_relocs,suppress
  build-depends:
    base >= 4,
    split
